src/styles.css
/* ... */
@layer base {
  *,
  *::after,
  *::before {
    box-sizing: border-box;
  }
  body {
    color: black;
    background: white;
    font-family: "Roboto Mono", sans-serif;
    font-size: 16px;
    line-height: normal;
  }

  input[type="radio"]:checked + label {
    background-color: white;
    opacity: 1;
  }

  input[type="radio"]:not(:checked) + label {
    opacity: 0.5;
  }

  /* * {
    outline: solid 0.25rem hsla(0, 87%, 50%, 0.5);
  } */
  /* .relative:hover .absolute {
    display: block;
  } */
}

@layer utilities {
  .fill-yellow-500-important {
    fill: theme("colors.yellow.400") !important;
  }
  .fill-blue-300-important {
    fill: theme("colors.blue.300") !important;
  }
  .w-18px-important {
    width: 18px !important;
  }
  .h-18px-important {
    height: 18px !important;
  }
  .w-20px-important {
    width: 20px !important;
  }
  .h-20px-important {
    height: 20px !important;
  }
  .w-22px-important {
    width: 22px !important;
  }
  .h-22px-important {
    height: 22px !important;
  }
  .w-25px-important {
    width: 25px !important;
  }
  .h-25px-important {
    height: 25px !important;
  }
  .w-100svw {
    width: 100vw;
    width: 100svw;
  }
  .h-100svh {
    height: 100vh;
    height: 100svh;
  }
  .w-100dvw {
    width: 100vw;
    width: 100dvw;
  }
  .h-100dvh {
    height: 100vh;
    height: 100dvh;
  }
  .w-50svw {
    width: 50vw;
    width: 50svw;
  }
  .h-cal-nav {
    height: calc(100vh - 55px);
  }
  .translate-x-200 {
    transform: translate(200%);
  }
  .-translate-x-200 {
    transform: translate(-200%);
  }
  .shadow-full-sm {
    -webkit-box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
    -moz-box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
    box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
  }
  .slider-container {
    width: 100%;
    overflow-x: scroll;
    overflow-y: hidden;
    scrollbar-width: none; /* Hide the scrollbar for Firefox */
    -ms-overflow-style: none; /* Hide the scrollbar for IE and Edge */
    scroll-behavior: smooth;
  }
  /* hide scrollbar on chrome base browser */
  .slider-container::-webkit-scrollbar {
    display: none;
  }

  .slider-container::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.2);
  }
}

